--- a/app/templates/about.jade
+++ b/app/templates/about.jade
@@ -82,7 +82,7 @@ block content
     
         li.row
     
-          img(src="/images/pages/about/george.jpg").img-polaroid
+          img(src="/images/pages/about/george.jpg").img-thumbnail
   
           .col-sm-8
   
@@ -95,7 +95,7 @@ block content
     
         li.row
 
-          img(src="/images/pages/about/scott.jpg").img-polaroid
+          img(src="/images/pages/about/scott.jpg").img-thumbnail
   
           .col-sm-8
 
@@ -109,7 +109,7 @@ block content
     
         li.row
     
-          img(src="/images/pages/about/nick.jpg").img-polaroid
+          img(src="/images/pages/about/nick.jpg").img-thumbnail
   
           .col-sm-8
 
@@ -123,7 +123,7 @@ block content
 
         li.row
     
-          img(src="/images/pages/about/jeremy.jpg").img-polaroid
+          img(src="/images/pages/about/jeremy.jpg").img-thumbnail
   
           .col-sm-8
 
@@ -137,7 +137,7 @@ block content
 
         li.row
     
-          img(src="/images/pages/about/michael.jpg").img-polaroid
+          img(src="/images/pages/about/michael.jpg").img-thumbnail
   
           .col-sm-8
 
