--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -40,7 +40,7 @@ block content
     .container
       div.row
         div.col-xs-3
-          img(src=photoURL).img-polaroid
+          img(src=photoURL).img-thumbnail
           
           p.about-me #{grav.aboutMe}
   
