--- a/app/templates/editor/thang/edit.jade
+++ b/app/templates/editor/thang/edit.jade
@@ -2,7 +2,7 @@ extends /templates/base
 
 block content
 
-  img#portrait.img-polaroid
+  img#portrait.img-thumbnail
 
   button.btn.btn-primary#save-button(data-toggle="coco-modal", data-target="modal/save_version")
     | Save
