Tweaked the home page button. #279

--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -19,10 +19,11 @@
     letter-spacing: 1px
     position: relative
 
-    a      
+    button
       font-size: 40px
       width: 300px
-      height: 80px      
+      height: 80px
+        
       //@include transition(color .10s linear) // buggy in chrome, coloring doesn't get the right edge of the word
 
     &:hover a, &:active a
