--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -35,14 +35,14 @@
   
   // keeps the editor tabs a certain height
 
-  .tab-content
+  #level-editor-tabs
     margin-top: 108px
     // keeps the tab content at a specific ratio
     width: 100%
     padding-bottom: 45%
     position: relative
     
-  .tab-pane
+  .level-editor-tab-pane
     // makes sure the pane itself fills the whole ratio'd space
     position: absolute
     top: 0
