--- a/app/templates/editor/level/system/edit.jade
+++ b/app/templates/editor/level/system/edit.jade
@@ -1,7 +1,21 @@
-h3.edit-system-name
-  span(data-i18n="editor.level_system_edit_title")
-    | Edit System
-  span : 
-    | "#{editTitle}"
-
-#edit-system-treema
+.navbar
+  .navbar-inner
+    p.navbar-text
+      span(data-i18n="editor.level_system_edit_title")
+        | Edit System
+      span : 
+        | "#{editTitle}"
+    ul.nav.nav-pills
+        li
+          a(href="#code" data-toggle="tab") Code
+        li
+          a(href="#config-schema" data-toggle="tab") Config Schema
+        li
+          a(href="#settings" data-toggle="tab") Settings
+.tab-content
+  .tab-pane.active#code
+    #system-code-editor
+  .tab-pane#config-schema
+    #config-schema-treema
+  .tab-pane#settings
+    #edit-system-treema
