--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -42,14 +42,14 @@ block outer_content
           a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
   
     div.tab-content#level-editor-tabs
-      div.tab-pane.level-editor-tab-pane.active#editor-level-thangs-tab-view
+      div.tab-pane.active#editor-level-thangs-tab-view
         
-      div.tab-pane.level-editor-tab-pane#editor-level-scripts-tab-view
+      div.tab-pane#editor-level-scripts-tab-view
   
-      div.tab-pane.level-editor-tab-pane#editor-level-settings-tab-view
+      div.tab-pane#editor-level-settings-tab-view
 
-      div.tab-pane.level-editor-tab-pane#editor-level-components-tab-view
+      div.tab-pane#editor-level-components-tab-view
 
-      div.tab-pane.level-editor-tab-pane#editor-level-systems-tab-view
+      div.tab-pane#editor-level-systems-tab-view
 
 block footer
