New editor layout.

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -11,7 +11,6 @@
   $BG: rgba(228, 207, 140, 1.0)
 
   .outer-content
-    padding: 0 10px 10px
     background-color: $BG
     position: absolute
     top: 0
@@ -23,33 +22,34 @@
     position: fixed
     background-color: $BG
     z-index: 100
-    left: 40px
-    right: 40px
+    left: 20px
+    right: 20px
     margin-top: -10px
     padding-top: 10px
 
     .level-title-header
       float: left
-      width: 500px
       text-overflow: ellipsis
       white-space: nowrap
   
     .level-control-buttons
       float: right
+      margin: 5px
       & > *
         margin: 10px 10px
   
     .nav-tabs
-      margin-bottom: 10px
+      margin: 15px 30px
+      float: left
   
   // keeps the editor tabs a certain height
 
   #level-editor-tabs
     position: absolute
-    left: 10px
-    right: 10px
-    top: 66px
-    bottom: 10px
+    left: 20px
+    right: 20px
+    top: 80px
+    bottom: 20px
     
   .treema-root
     background-color: white
