--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -2,27 +2,8 @@ extends /templates/base
 
 block outer_content
   .outer-content
-
-    nav.navbar.navbar-default
-      .navbar-header
-        a.navbar-brand
-          span(data-i18n="editor.level_title") Level Editor
-          span : 
-          span.level-title #{level.attributes.name}
-
-      ul.nav.nav-pills
-        li.active
-          a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
-        li
-          a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
-        li
-          a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
-        li
-          a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
-        li
-          a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems        
     
-    //.top-controls-area
+    .top-controls-area
       h2.level-title-header
         span(data-i18n="editor.level_title") Level Editor
         span : 
@@ -36,6 +17,7 @@ block outer_content
           button(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="common.play")#play-button.btn.btn-inverse.banner Play!
           button.btn.btn-inverse.banner.dropdown-toggle(data-toggle="dropdown")
             i.icon-cog.icon-white
+          
       
           ul.dropdown-menu
             li
@@ -46,7 +28,6 @@ block outer_content
               a(data-delay="3000", href="#", data-i18n="common.delay_3_sec") 3 seconds
               a(data-delay="5000", href="#", data-i18n="common.delay_5_sec") 5 seconds
               a(data-delay="90019001", href="#", data-i18n="common.manual") Manual
-      .clearfix
     
       ul.nav.nav-tabs
         li.active
