--- a/app/styles/play/level/tome/cast_button.sass
+++ b/app/styles/play/level/tome/cast_button.sass
@@ -36,14 +36,16 @@
 
   .cast-button-group
     z-index: 2
-    @include opacity(77)
+    @include opacity(0.77)
     width: 100%
+    border-radius: 6px
     
     .button-progress-overlay
       position: absolute
       left: 0
       top: 0
       bottom: 0
+      border-radius: 6px
       // This transition time should roughly match the world progress update interval
       @include transition(width .2s linear)
 
@@ -51,7 +53,7 @@
       background-color: rgba(255, 255, 255, 0.5)
 
     &:hover, &.castable
-      @include opacity(100)
+      @include opacity(1)
 
     &.castable
       -webkit-animation-name: castablePulse
@@ -67,19 +69,28 @@
     &:not(.castable):not(:hover)
       .cast-options-button
         // Mimic the disabled visuals
-        @include opacity(65)
+        @include opacity(0.65)
         background-image: none
         @include box-shadow(none)
         
     .btn
       padding: 3px 10px
+      height: 40px
 
     .cast-button
-      width: 100%
-      height: 29px
+      width: 80%
+      width: -webkit-calc(100% - 40px)
+      width: calc(100% - 40px)
+
+    .cast-options-button
+      width: 20%
+      width: -webkit-calc(40px)
+      width: calc(40px)
 
     .autocast-delays
       min-width: 0
+      right: 0
+      left: auto
       li
         a, .dropdown-menu-header
           padding: 3px 15px
