--- a/app/templates/account/unsubscribe.jade
+++ b/app/templates/account/unsubscribe.jade
@@ -10,7 +10,7 @@ block content
   button.btn.btn-warning#unsubscribe-button(data-i18n="account.unsubscribe_button") Do it
 
   .progress.progress-striped.active.hide
-    .bar
+    .progress-bar
       
   p.hide#fail-alert(data-i18n="account.unsubscribe_failed").alert.alert-danger Failed
     
