--- a/app/templates/modal/modal_base.jade
+++ b/app/templates/modal/modal_base.jade
@@ -18,7 +18,7 @@
         block modal-body-wait-content
           h3 Reticulating Splines...
         .progress.progress-striped.active
-          .bar
+          .progress-bar
 
     block modal-footer
       .modal-footer
