--- a/app/templates/play/level/playback.jade
+++ b/app/templates/play/level/playback.jade
@@ -12,7 +12,7 @@ button.btn.btn-xs.btn-inverse#music-button(title="Toggle Music")
 
 .scrubber
   .progress.hide
-    .bar
+    .progress-bar
       .scrubber-handle
   
 .btn-group.dropup#playback-settings
