--- a/app/styles/play/level/tome/spell_toolbar.sass
+++ b/app/styles/play/level/tome/spell_toolbar.sass
@@ -25,14 +25,14 @@
       .progress
         position: absolute
         left: 0px
-        top: 12.5px
+        top: 17.5px
         bottom: 0px
         width: 100%
         height: 4px
         overflow: visible
         pointer-events: none
   
-        .bar
+        .progress-bar
           @include transition(width .0s linear)
           position: relative
           pointer-events: none
@@ -44,10 +44,10 @@
             position: absolute
             pointer-events: none
             right: -5px
-            top: -12.5px
+            top: -17.5px
             background: linear-gradient(#2c3e5f, #2c3e5f 16%, #3a537f 16%, #3a537f 83%, #2c3e5f 84%, #2c3e5f)
             width: 14px
-            height: 29px
+            height: 40px
             border-radius: 3px
             box-sizing: border-box
             border: 1px solid black
@@ -59,13 +59,16 @@
     .steppers
       position: absolute
       z-index: 2
-      width: 10%
+      width: 60px
       right: 2%
       box-sizing: border-box
       opacity: 0.25
   
       button
-        height: 29px
+        box-sizing: border-box
+        height: 40px
+        width: 30px
+        padding: 2px
   
     .metrics
       display: none
