Improved the navbars in the level editor.

--- a/app/templates/editor/level/system/edit.jade
+++ b/app/templates/editor/level/system/edit.jade
@@ -1,17 +1,22 @@
-.navbar
-  .navbar-inner
-    p.navbar-text
-      span(data-i18n="editor.level_system_edit_title")
-        | Edit System
-      span : 
-        | "#{editTitle}"
-    ul.nav.nav-pills
-        li
+nav.navbar.navbar-default(role='navigation')
+  .container-fluid
+    .navbar-header
+      span.navbar-brand
+        span(data-i18n="editor.level_system_edit_title")
+          | Edit System
+        span : 
+          | "#{editTitle}"
+    .collapse.navbar-collapse
+      ul.nav.navbar-nav.nav-tabs
+        li.active
           a(href="#code" data-toggle="tab") Code
         li
           a(href="#config-schema" data-toggle="tab") Config Schema
         li
           a(href="#settings" data-toggle="tab") Settings
+      ul.nav.navbar-nav.navbar-right
+        li(data-i18n="editor.level_system_btn_new").btn.btn-primary.navbar-btn#create-new-system-button Create New System
+  
 .tab-content
   .tab-pane.active#code
     #system-code-editor
