--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -1,4 +1,7 @@
 #editor-level-view
+  a
+    font-family: helvetica, arial, sans serif
+  
   #top-nav
     display: none
 
@@ -9,6 +12,14 @@
   bottom: 0px
 
   $BG: rgba(228, 207, 140, 1.0)
+
+  li.navbar-btn
+    margin-right: 5px
+  
+  .nav-tabs
+    border-bottom: 0 !important
+    .active > a, .active > a:hover, .active > a:focus
+      background-color: #eee !important
 
   .outer-content
     background-color: $BG
@@ -26,21 +37,6 @@
     right: 20px
     margin-top: -10px
     padding-top: 10px
-
-    .level-title-header
-      float: left
-      text-overflow: ellipsis
-      white-space: nowrap
-  
-    .level-control-buttons
-      float: right
-      margin: 5px
-      & > *
-        margin: 10px 10px
-  
-    .nav-tabs
-      margin: 15px 30px
-      float: left
   
   // keeps the editor tabs a certain height
 
@@ -48,7 +44,7 @@
     position: absolute
     left: 20px
     right: 20px
-    top: 80px
+    top: 66px
     bottom: 20px
     
   .treema-root
