--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -1,17 +1,21 @@
-.navbar
-  .navbar-inner
-    p.navbar-text
-      span(data-i18n="editor.level_component_edit_title")
-        | Edit Component
-      span : 
-        | "#{editTitle}"
-    ul.nav.nav-pills
-      li
-        a(href="#code" data-toggle="tab") Code
-      li
-        a(href="#config-schema" data-toggle="tab") Config Schema
-      li
-        a(href="#settings" data-toggle="tab") Settings
+nav.navbar.navbar-default(role='navigation')
+  .container-fluid
+    .navbar-header
+      span.navbar-brand
+        span(data-i18n="editor.level_component_edit_title")
+          | Edit Component
+        span : 
+          | "#{editTitle}"
+    .collapse.navbar-collapse
+      ul.nav.navbar-nav.nav-tabs
+        li.active
+          a(href="#code" data-toggle="tab") Code
+        li
+          a(href="#config-schema" data-toggle="tab") Config Schema
+        li
+          a(href="#settings" data-toggle="tab") Settings
+      ul.nav.navbar-nav.navbar-right
+        li(data-i18n="editor.level_component_btn_new").btn.btn-primary.navbar-btn#create-new-component-button Create New Component
 
 .tab-content
   .tab-pane.active#code
