--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -2,21 +2,55 @@ extends /templates/base
 
 block outer_content
   .outer-content
-    
-    .top-controls-area
-      h2.level-title-header
-        span(data-i18n="editor.level_title") Level Editor
-        span : 
-        span.level-title #{level.attributes.name}
-    
-      .level-control-buttons
-        button(data-toggle="coco-modal", data-target="modal/revert", data-i18n="revert.revert").btn.btn-primary#revert-button Revert
-        button(data-i18n="common.save").btn.btn-primary#commit-level-start-button Save
-        button(data-i18n="common.fork").btn.btn-primary#fork-level-start-button Fork
-        .btn-group.play-button-group
-          button(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="common.play")#play-button.btn.btn-inverse.banner Play!
-          button.btn.btn-inverse.banner.dropdown-toggle(data-toggle="dropdown")
-            i.icon-cog.icon-white
+
+    nav.navbar.navbar-default(role='navigation')#level-editor-top-nav
+      .container-fluid
+        ul.nav.navbar-nav
+          li
+            a(href="/editor/level") Back
+        .navbar-header
+          span.navbar-brand
+            span(data-i18n="editor.level_title") Level Editor
+            span : 
+            span.level-title #{level.attributes.name}
+        .collapse.navbar-collapse
+          ul.nav.navbar-nav.nav-tabs
+
+            li.active
+              a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
+            li
+              a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
+            li
+              a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
+            li
+              a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
+            li
+              a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
+            
+            
+          ul.nav.navbar-nav.navbar-right
+            li(data-toggle="coco-modal", data-target="modal/revert", data-i18n="revert.revert").btn.btn-primary.navbar-btn#revert-button Revert
+
+            li(data-i18n="common.save").btn.btn-primary.navbar-btn#commit-level-start-button Save
+            li(data-i18n="common.fork").btn.btn-primary.navbar-btn#fork-level-start-button Fork
+            li(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="common.play")#play-button.btn.btn-inverse.banner.navbar-btn Play!
+
+            li.divider
+
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown')
+                | Help
+                b.caret
+              ul.dropdown-menu
+                li
+                  a(href='https://github.com/codecombat/codecombat/wiki/Artisan-Home') Wiki
+                li
+                  a(href='http://www.hipchat.com/g3plnOKqa') Live Chat
+                li
+                  a(href='http://discourse.codecombat.com/category/artisan') Forum
+                li
+                  a(data-toggle="coco-modal", data-target="modal/contact", data-i18n="nav.contact") Email
+
           
       
           ul.dropdown-menu
@@ -28,18 +62,46 @@ block outer_content
               a(data-delay="3000", href="#", data-i18n="common.delay_3_sec") 3 seconds
               a(data-delay="5000", href="#", data-i18n="common.delay_5_sec") 5 seconds
               a(data-delay="90019001", href="#", data-i18n="common.manual") Manual
-    
-      ul.nav.nav-tabs
-        li.active
-          a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
-        li
-          a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
-        li
-          a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
-        li
-          a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
-        li
-          a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
+
+
+
+    //.top-controls-area
+    //  h2.level-title-header
+    //    span(data-i18n="editor.level_title") Level Editor
+    //    span : 
+    //    span.level-title #{level.attributes.name}
+    //
+    //  .level-control-buttons
+    //    button(data-toggle="coco-modal", data-target="modal/revert", data-i18n="revert.revert").btn.btn-primary#revert-button Revert
+    //    button(data-i18n="common.save").btn.btn-primary#commit-level-start-button Save
+    //    button(data-i18n="common.fork").btn.btn-primary#fork-level-start-button Fork
+    //    .btn-group.play-button-group
+    //      button(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="common.play")#play-button.btn.btn-inverse.banner Play!
+    //      button.btn.btn-inverse.banner.dropdown-toggle(data-toggle="dropdown")
+    //        i.icon-cog.icon-white
+    //      
+    //  
+    //      ul.dropdown-menu
+    //        li
+    //          span(data-i18n="editor.level_some_options").dropdown-menu-header Some Options?
+    //        li.divider
+    //        li
+    //          a(data-delay="1000", href="#", data-i18n="common.delay_1_sec") 1 second
+    //          a(data-delay="3000", href="#", data-i18n="common.delay_3_sec") 3 seconds
+    //          a(data-delay="5000", href="#", data-i18n="common.delay_5_sec") 5 seconds
+    //          a(data-delay="90019001", href="#", data-i18n="common.manual") Manual
+    //
+    //  ul.nav.nav-tabs
+    //    li.active
+    //      a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
+    //    li
+    //      a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
+    //    li
+    //      a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
+    //    li
+    //      a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
+    //    li
+    //      a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
   
     div.tab-content#level-editor-tabs
       div.tab-pane.active#editor-level-thangs-tab-view
