Fixed the styling for editing components in the level editor.

--- a/app/styles/editor/thang/edit.sass
+++ b/app/styles/editor/thang/edit.sass
@@ -58,9 +58,9 @@
     
 
 #thang-components-edit-view
-  position: relative
-  height: 500px
-  top: -20px
+  position: absolute
+  top: 45px
+  bottom: 0
   
   .treema-root
     background-color: white
