--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -232,8 +232,8 @@ a[data-toggle="modal"]
 table.table
   background-color: white
 
-.ui-autocomplete
-  //z-index: $zindexAutocomplete
+//.ui-autocomplete
+//  z-index: $zindexAutocomplete
   
 div.fancy-select
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
