--- a/app/templates/editor/components/main.jade
+++ b/app/templates/editor/components/main.jade
@@ -1,9 +1,11 @@
 #extant-components-column.column
   h3 Components
+  p Click then press delete to remove.
   .treema
   
 #component-config-column-view.column
   
 #add-component-column.column
   h3 Add Components
+  p Click then press enter to add.
   .treema
