Some styling fixes, removed commented out stuff.

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -19,7 +19,7 @@
   .nav-tabs
     border-bottom: 0 !important
     .active > a, .active > a:hover, .active > a:focus
-      background-color: #eee !important
+      background-color: $BG !important
 
   .outer-content
     background-color: $BG
