Tweaked tab styling on level editor.

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -16,10 +16,13 @@
   li.navbar-btn
     margin-right: 5px
   
-  .nav-tabs
-    border-bottom: 0 !important
-    .active > a, .active > a:hover, .active > a:focus
-      background-color: $BG !important
+  #level-editor-top-nav
+    .nav-tabs
+      border-bottom: 0 !important
+      .active > a, .active > a:hover, .active > a:focus
+        background-color: $BG !important
+        border-color: darken($BG, 50%)
+        border-bottom: 0
 
   .outer-content
     background-color: $BG
