--- a/app/styles/editor/level/system/edit.sass
+++ b/app/styles/editor/level/system/edit.sass
@@ -10,3 +10,6 @@
     top: 50px
     border: 2px solid black
     border-top: none
+    
+  .active > a, .active > a:hover, .active > a:focus
+    background-color: white !important
