--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -9,18 +9,18 @@ nav.navbar.navbar-default(role='navigation')
     .collapse.navbar-collapse
       ul.nav.navbar-nav.nav-tabs
         li.active
-          a(href="#code" data-toggle="tab") Code
+          a(href="#component-code" data-toggle="tab") Code
         li
-          a(href="#config-schema" data-toggle="tab") Config Schema
+          a(href="#component-config-schema" data-toggle="tab") Config Schema
         li
-          a(href="#settings" data-toggle="tab") Settings
+          a(href="#component-settings" data-toggle="tab") Settings
       ul.nav.navbar-nav.navbar-right
         li(data-i18n="editor.level_component_btn_new").btn.btn-primary.navbar-btn#create-new-component-button Create New Component
 
 .tab-content
-  .tab-pane.active#code
+  .tab-pane.active#component-code
     #component-code-editor
-  .tab-pane#config-schema
+  .tab-pane#component-config-schema
     #config-schema-treema
-  .tab-pane#settings
+  .tab-pane#component-settings
     #edit-component-treema
