Changed the links for artisan documentation to the new wiki pages.

--- a/app/templates/contribute/contribute.jade
+++ b/app/templates/contribute/contribute.jade
@@ -154,7 +154,7 @@ block content
             | Use the Level Editor in these steps, give or take:
           ul
             li
-              a(href="https://docs.google.com/document/d/117tMcL95T1KY8BDisr0iGi5Frb2ZvBJTC0us5hyQkJY/edit?usp=sharing", data-i18n="contribute.artisan_join_step1") Read the documentation.
+              a(href="https://github.com/codecombat/codecombat/wiki/Artisan-Home", data-i18n="contribute.artisan_join_step1") Read the documentation.
             li
               a(href="/editor/level", data-i18n="contribute.artisan_join_step2") Create a new level and explore existing levels.
             li
