A few updates to the contributors lists.

--- a/app/templates/contribute/artisan.jade
+++ b/app/templates/contribute/artisan.jade
@@ -74,9 +74,6 @@ block content
           | Get emails on level editor updates and announcements.
         .saved-notification  ✓ Saved
 
-      h4(data-i18n="contribute.changes_auto_save")
-        | Changes are saved automatically when you toggle checkboxes.
-
       #Contributors
         h3(data-i18n="contribute.creative_artisans")
           | Our Creative Artisans:
@@ -85,5 +82,12 @@ block content
           li Zach Martin
           li Aftermath
           li mcdavid1991
+          li dwhittaker
+          li Zacharias Fisches
+          li Tom Setliff
+          li Robert Moreton
+          li Andrew Witcher
+          li Axandre Oge
+          li Katharine Chan
 
     div.clearfix
