--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -65,30 +65,32 @@ block content
           | Get emails about i18n developments and levels to translate.
         .saved-notification  ✓ Saved
 
-      h4(data-i18n="contribute.changes_auto_save")
-        | Changes are saved automatically when you toggle checkboxes.
-
       #Contributors
         h3(data-i18n="contribute.translating_diplomats")
           | Our Translating Diplomats:
         ul.diplomats
-          li Turkish - Nazım Gediz Aydındoğmuş
-          li Brazilian Portuguese - Gutenberg Barros, Kieizroe, Matthew Burt
-          li Portugal Portuguese - Matthew Burt
-          li German - Dirk, Anon
+          li Turkish - Nazım Gediz Aydındoğmuş, cobaimelan, wakeup
+          li Brazilian Portuguese - Gutenberg Barros, Kieizroe, Matthew Burt, brunoporto
+          li Portugal Portuguese - Matthew Burt, ReiDuKuduro
+          li German - Dirk, faabsen, HiroP0, Anon
           li Thai - Kamolchanok Jittrepit
           li Vietnamese - An Nguyen Hoang Thien
           li Dutch - Glen De Cauwsemaecker
           li Greek - Stergios
           li Latin American Spanish - Jesús Ruppel, Matthew Burt, Mariano Luzza
-          li Spain Spanish - Matthew Burt, Anon
-          li French - Xeonarno, Anon
-          li Hungarian - Anon
-          li Japanese - g1itch
-          li Chinese - spacepope
+          li Spain Spanish - Matthew Burt, DanielRodriguezRivero, Anon
+          li French - Xeonarno, Elfisen, Armaldio, MartinDelille, pstweb, veritable, jaybi, Anon
+          li Hungarian - ferpeter, csuvsaregal, atlantisguru, Anon
+          li Japanese - g1itch, kengos
+          li Chinese - Adam23, spacepope
           li Polish - Anon
           li Danish - Anon
           li Slovak - Anon
-          li Persian - Reza Habibi(Rehb)
+          li Persian - Reza Habibi (Rehb)
+          li Czech - vanous
+          li Russian - fess89, ser-storchak, 
+          li Ukrainian - fess89
+          li Italian - flauta
+          li Norwegian - bardeh
 
     div.clearfix
