--- a/app/templates/contribute/scribe.jade
+++ b/app/templates/contribute/scribe.jade
@@ -63,14 +63,18 @@ block content
           | Get emails about article writing announcements.
         .saved-notification  ✓ Saved
 
-      h4(data-i18n="contribute.changes_auto_save")
-        | Changes are saved automatically when you toggle checkboxes.
-
       #Contributors
         h3(data-i18n="contribute.diligent_scribes")
           | Our Diligent Scribes:
         ul.scribes
           li Ryan Faidley
           li Glen De Cauwsemaecker
+          li Mischa Lewis-Norelle
+          li Tavio
+          li Ronnie Cheng
+          li engstrom
+          li Dman19993
+          li mattinsler
+          
 
     div.clearfix
