--- a/app/templates/contribute/adventurer.jade
+++ b/app/templates/contribute/adventurer.jade
@@ -72,13 +72,11 @@ block content
           | Get emails when there are new levels to test.
         .saved-notification  ✓ Saved
 
-      h4(data-i18n="contribute.changes_auto_save")
-        | Changes are saved automatically when you toggle checkboxes.
-
-      #Contributors
-        h3(data-i18n="contribute.brave_adventurers")
-          | Our Brave Adventurers:
-        ul.adventurers
-          li Kieizroe          
+      //#Contributors
+      //  h3(data-i18n="contribute.brave_adventurers")
+      //    | Our Brave Adventurers:
+      //  ul.adventurers
+      //    li Kieizroe
+      //    li ... many, many more
 
     div.clearfix
