--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -84,7 +84,7 @@ block content
           li Japanese - g1itch, kengos
           li Chinese - Adam23, spacepope
           li Polish - Anon
-          li Danish - Anon
+          li Danish - Einar Rasmussen, sorsjen, Anon
           li Slovak - Anon
           li Persian - Reza Habibi (Rehb)
           li Czech - vanous
