Updated to new Aether range info, fixing error line numbers.

--- a/app/templates/play/level/tome/problem_alert.jade
+++ b/app/templates/play/level/tome/problem_alert.jade
@@ -1,3 +1,5 @@
 button.close(type="button", data-dismiss="alert") &times;
-span
-  != message
+span.problem-message= message
+if hint
+  br
+  span.problem-hint= hint
