Improvements to how Tome subviews manage Thang updates.

--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -223,7 +223,10 @@
 
         .hud-hint
           font-weight: normal
-          color: #888888
+          color: #aaa
+          position: absolute
+          top: 0
+          right: 4px
 
         .enter
           position: absolute
