Messing with team setting.

--- a/app/templates/play/level/modal/multiplayer.jade
+++ b/app/templates/play/level/modal/multiplayer.jade
@@ -24,6 +24,12 @@
         span(data-i18n="play_level.multiplayer_hint")  Click the link to select all, then press ⌘-C or Ctrl-C to copy the link.
     
       p(data-i18n="play_level.multiplayer_coming_soon") More multiplayer features to come!
+
+    if playableTeams.length > 1
+      #multiplayer-team-selection
+        for team in playableTeams
+          label(for="multiplayer_team_"+team)= team
+          input(id="multiplayer_team_"+team, type="radio", name="multiplayer", value=team)
   
   .modal-footer
     a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
