Starting to add contributor avatars.

--- a/app/styles/contribute_classes.sass
+++ b/app/styles/contribute_classes.sass
@@ -39,3 +39,11 @@
     .saved-notification
       display: none
       float: right
+
+  .thumbnail
+    background-color: transparent
+    h4
+      text-align: center
+    img
+      max-width: 100px
+      max-height: 100px
