--- a/app/templates/about.jade
+++ b/app/templates/about.jade
@@ -82,7 +82,7 @@ block content
     
         li.row
     
-          img(src="/images/pages/about/george.jpg").img-thumbnail
+          img(src="/images/pages/about/george_small.png").img-thumbnail
   
           .col-sm-8
   
@@ -95,7 +95,7 @@ block content
     
         li.row
 
-          img(src="/images/pages/about/scott.jpg").img-thumbnail
+          img(src="/images/pages/about/scott_small.png").img-thumbnail
   
           .col-sm-8
 
@@ -109,7 +109,7 @@ block content
     
         li.row
     
-          img(src="/images/pages/about/nick.jpg").img-thumbnail
+          img(src="/images/pages/about/nick_small.png").img-thumbnail
   
           .col-sm-8
 
@@ -123,12 +123,11 @@ block content
 
         li.row
     
-          img(src="/images/pages/about/jeremy.jpg").img-thumbnail
+          img(src="/images/pages/about/jeremy_small.png").img-thumbnail
   
           .col-sm-8
 
-            h3
-              Jeremy Arns
+            h3 Jeremy Arns
     
             p(data-i18n="about.jeremy_description")
               | Customer support mage, usability tester, 
@@ -137,7 +136,7 @@ block content
 
         li.row
     
-          img(src="/images/pages/about/michael.jpg").img-thumbnail
+          img(src="/images/pages/about/michael_small.png").img-thumbnail
   
           .col-sm-8
 
