--- a/app/styles/contribute_classes.sass
+++ b/app/styles/contribute_classes.sass
@@ -42,8 +42,13 @@
 
   .thumbnail
     background-color: transparent
+    height: 176px
+    &:hover
+      background-color: rgba(200, 244, 255, 0.2)
+
     h4
       text-align: center
     img
       max-width: 100px
       max-height: 100px
+    
