Tweaked about avatar formatting.

--- a/app/styles/about.sass
+++ b/app/styles/about.sass
@@ -11,11 +11,13 @@
 
       li
         list-style-type: none
-        padding-bottom: 20px
 
 
-    img
+    img.img-thumbnail
+      background-color: transparent
+      &:hover
+        background-color: rgba(200, 244, 255, 0.2)
       float: left
-      width: 150px
-      height: 150px
-
+      width: 100px
+      height: 100px
+      margin-top: 22px
