--- a/app/templates/about.jade
+++ b/app/templates/about.jade
@@ -82,7 +82,8 @@ block content
     
         li.row
     
-          img(src="/images/pages/about/george_small.png").img-thumbnail
+          a(href="http://georgesaines.com")
+            img(src="/images/pages/about/george_small.png").img-thumbnail
   
           .col-sm-8
   
@@ -95,7 +96,8 @@ block content
     
         li.row
 
-          img(src="/images/pages/about/scott_small.png").img-thumbnail
+          a(href="http://scotterickson.info")
+            img(src="/images/pages/about/scott_small.png").img-thumbnail
   
           .col-sm-8
 
@@ -109,7 +111,8 @@ block content
     
         li.row
     
-          img(src="/images/pages/about/nick_small.png").img-thumbnail
+          a(href="http://www.nickwinter.net")
+            img(src="/images/pages/about/nick_small.png").img-thumbnail
   
           .col-sm-8
 
@@ -136,7 +139,8 @@ block content
 
         li.row
     
-          img(src="/images/pages/about/michael_small.png").img-thumbnail
+          a(href="http://michaelschmatz.com")
+            img(src="/images/pages/about/michael_small.png").img-thumbnail
   
           .col-sm-8
 
