--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -93,6 +93,8 @@
       .prop
         img
           margin-right: 5px
+          width: 16px
+          height: 16px
 
       .text-prop
         width: 50%
