Added a 'stop' button for viewing end animations on thang types.

--- a/app/styles/editor/thang/edit.sass
+++ b/app/styles/editor/thang/edit.sass
@@ -35,7 +35,7 @@
       position: relative
       top: 3px
       
-  #marker-button
+  #marker-button, #end-button
     float: right
     margin-right: 10px
     position: relative
