--- a/app/templates/editor/thang/edit.jade
+++ b/app/templates/editor/thang/edit.jade
@@ -39,6 +39,9 @@ block content
         button.btn.btn-small.btn-primary#marker-button
           i.icon-map-marker
 
+        button.btn.btn-small.btn-primary#end-button
+          i.icon-stop
+
         div.slider-cell
           | Rotation:
           span.rotation-label
