Fixed modal switchout and palette property interpolation. Refactored all use of .hide to .secret so we can use jQuery to show/hide things again.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -1,6 +1,10 @@
 @import "bootstrap/variables"
 @import "bootstrap/mixins"
 
+// https://github.com/twbs/bootstrap/issues/9237 -- need a version that's not !important
+.secret
+  display: none
+
 h1 h2 h3 h4
   letter-spacing: 2px
 
