--- a/app/templates/account/unsubscribe.jade
+++ b/app/templates/account/unsubscribe.jade
@@ -9,9 +9,9 @@ block content
   
   button.btn.btn-warning#unsubscribe-button(data-i18n="account.unsubscribe_button") Do it
 
-  .progress.progress-striped.active.hide
+  .progress.progress-striped.active.secret
     .progress-bar
       
-  p.hide#fail-alert(data-i18n="account.unsubscribe_failed").alert.alert-danger Failed
+  p.secret#fail-alert(data-i18n="account.unsubscribe_failed").alert.alert-danger Failed
     
-  p.hide#success-alert(data-i18n="account.unsubscribe_success").alert.alert-success Success
+  p.secret#success-alert(data-i18n="account.unsubscribe_success").alert.alert-success Success
