--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -31,4 +31,4 @@
           - path = '/file/db/thang.type/'+thangType.original+'/portrait.png'
           img(title="Add " + thangType.name, src=path, alt="")
       div.clearfix
-#editor-level-thang-edit.hide
+#editor-level-thang-edit.secret
