--- a/app/templates/editor/thang/colors_tab.jade
+++ b/app/templates/editor/thang/colors_tab.jade
@@ -1,6 +1,6 @@
 div#color-groups-treema
 
-div#color-group-settings.hide
+div#color-group-settings.secret
   div#shape-buttons
     
   canvas#tinting-display(width=400, height=400)
