--- a/app/templates/modal/modal_base.jade
+++ b/app/templates/modal/modal_base.jade
@@ -14,7 +14,7 @@
           img(src="http://www.manbitesgod.com/images/picturecoupleb.jpg")
           img(src="http://www.manbitesgod.com/images/manrantb.jpg")
 
-      .modal-body.wait.hide
+      .modal-body.wait.secret
         block modal-body-wait-content
           h3 Reticulating Splines...
         .progress.progress-striped.active
