--- a/app/templates/play/level.jade
+++ b/app/templates/play/level.jade
@@ -11,11 +11,11 @@
     #canvas-left-gradient.gradient
     #canvas-top-gradient.gradient
   
-  a.btn.btn-primary.banner.hide#level-done-button(data-i18n="play_level.done") Done
+  a.btn.btn-primary.banner.secret#level-done-button(data-i18n="play_level.done") Done
   
-  #goals-view.hide
+  #goals-view.secret
   
-  #gold-view.hide.expanded
+  #gold-view.secret.expanded
 
   #level-chat-view
   
