--- a/app/templates/kinds/search.jade
+++ b/app/templates/kinds/search.jade
@@ -21,7 +21,7 @@ block content
         .modal-footer
           button.btn(data-dismiss="modal") Cancel
           button.btn.btn-primary.new-model-submit Create
-        .modal-body.wait.hide
+        .modal-body.wait.secret
           h3 Reticulating Splines...
           .progress.progress-striped.active
             .progress-bar
