--- a/app/templates/play/level/playback.jade
+++ b/app/templates/play/level/playback.jade
@@ -11,7 +11,7 @@ button.btn.btn-xs.btn-inverse#music-button(title="Toggle Music")
   | ♫
 
 .scrubber
-  .progress.hide
+  .progress.secret
     .progress-bar
       .scrubber-handle
   
@@ -27,11 +27,11 @@ button.btn.btn-xs.btn-inverse#music-button(title="Toggle Music")
       li(title="Ctrl/Cmd + \\: Toggle debug display").selectable#debug-toggle
         i.icon-globe
         | Debug Mode
-        i.icon-ok.hide
+        i.icon-ok.secret
     li(title="Ctrl/Cmd + G: Toggle grid display").selectable#grid-toggle
       i.icon-th
       span(data-i18n="play_level.grid") Grid
-      i.icon-ok.hide
+      i.icon-ok.secret
     li.selectable#edit-wizard-settings
       i.icon-user
       span(data-i18n="play_level.customize_wizard") Customize Wizard
