Set up the multiplayer modal with a submit button for the ladder queue.

--- a/app/templates/play/level/modal/multiplayer.jade
+++ b/app/templates/play/level/modal/multiplayer.jade
@@ -34,5 +34,8 @@
             else
               a(href=joinLink + "&skip_protect_api=true&team=" + team)= "Play as " + team
   
+    if ladderGame
+      #submit-session-button.btn.btn-primary Update Ladder Score
+  
   .modal-footer
     a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
