--- a/app/templates/play/level/tome/spell_palette_entry_popover.jade
+++ b/app/templates/play/level/tome/spell_palette_entry_popover.jade
@@ -20,7 +20,8 @@ else if doc.type == 'function'
 if doc.type != 'function' && doc.type != 'snippet'
   p.value
     strong Current Value: 
-    code.current-value(data-prop=doc.name)= value
+    pre
+      code.current-value(data-prop=doc.name)= value
 
 if doc.args && doc.args.length
   p.args
