--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -20,12 +20,12 @@ block content
             table.table
               for session in team.leaderboard.topPlayers.models
                 tr= session.get('creatorName')
-          .challengers
-            h4 Challengers
-            
-            if team.easyChallenger
-              div.challenger-select
-                | Easy challenger:
-                button
-                  a(href=link+'?team='+team.id+'&opponent='+team.easyChallenger.id)
-            //TODO: finish once the scoring system is finished
+          //.challengers
+          //  h4 Challengers
+          //  
+          //  if team.easyChallenger
+          //    div.challenger-select
+          //      | Easy challenger:
+          //      button
+          //        a(href=link+'?team='+team.id+'&opponent='+team.easyChallenger.id)
+          //  TODO: finish once the scoring system is finished
