Support for seeing this.now() in spell palette.

--- a/app/templates/play/level/tome/spell_palette_entry_popover.jade
+++ b/app/templates/play/level/tome/spell_palette_entry_popover.jade
@@ -17,7 +17,7 @@ else if doc.type == 'function'
     div
       code= doc.owner + '.' + doc.name + '(' + argumentExamples.join(', ') + ');'
 
-if doc.type != 'function' && doc.type != 'snippet'
+if (doc.type != 'function' && doc.type != 'snippet') || doc.name == 'now'
   p.value
     strong Current Value: 
     pre
