--- a/app/templates/play/level/tome/problem_alert.jade
+++ b/app/templates/play/level/tome/problem_alert.jade
@@ -1,5 +1,5 @@
 button.close(type="button", data-dismiss="alert") &times;
-span.problem-message= message
+span.problem-message!= message
 if hint
   br
-  span.problem-hint= hint
+  span.problem-hint!= hint
